Se restauran los embeds de youtube y soundcloud. Aunque soundcloud no sirve

--- a/_posts/2011-10-18-metro-df.md
+++ b/_posts/2011-10-18-metro-df.md
@@ -13,12 +13,12 @@ Esta mujer fuera de sus facultades queriendo matar a alguién.
 
   
 
-  
+ <object class="BLOGGER-youtube-video" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0" data-thumbnail-src="http://0.gvt0.com/vi/1Pga7rICiTw/0.jpg" height="266" width="320"><param name="movie" value="http://www.youtube.com/v/1Pga7rICiTw&amp;fs=1&amp;source=uds"> <param name="bgcolor" value="#FFFFFF"> <embed width="320" height="266" src="http://www.youtube.com/v/1Pga7rICiTw&amp;fs=1&amp;source=uds" type="application/x-shockwave-flash"></object> 
 
   
 Este hombre de terco con qué el se va en ese vagón.  
 
-  
+ <object class="BLOGGER-youtube-video" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0" data-thumbnail-src="http://2.gvt0.com/vi/c597iq7sN5I/0.jpg" height="266" width="320"><param name="movie" value="http://www.youtube.com/v/c597iq7sN5I&amp;fs=1&amp;source=uds"> <param name="bgcolor" value="#FFFFFF"> <embed width="320" height="266" src="http://www.youtube.com/v/c597iq7sN5I&amp;fs=1&amp;source=uds" type="application/x-shockwave-flash"></object> 
 
   
 
@@ -26,8 +26,10 @@ Con la desesperación de irse, hasta por la ventana se suben.
 
   
 
-   
+ <object class="BLOGGER-youtube-video" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0" data-thumbnail-src="http://2.gvt0.com/vi/c1Aw-3f47Yo/0.jpg" height="266" width="320"><param name="movie" value="http://www.youtube.com/v/c1Aw-3f47Yo&amp;fs=1&amp;source=uds"> <param name="bgcolor" value="#FFFFFF"> <embed width="320" height="266" src="http://www.youtube.com/v/c1Aw-3f47Yo&amp;fs=1&amp;source=uds" type="application/x-shockwave-flash"></object>  
 
   
 
 Que alguién le diga que ya madure.
+
+ <object class="BLOGGER-youtube-video" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0" data-thumbnail-src="http://1.gvt0.com/vi/3YUfE8-4HF0/0.jpg" height="266" width="320"><param name="movie" value="http://www.youtube.com/v/3YUfE8-4HF0&amp;fs=1&amp;source=uds"> <param name="bgcolor" value="#FFFFFF"> <embed width="320" height="266" src="http://www.youtube.com/v/3YUfE8-4HF0&amp;fs=1&amp;source=uds" type="application/x-shockwave-flash"></object>
