modificadas las tags de embed

--- a/_posts/2011-06-28-el-fua.md
+++ b/_posts/2011-06-28-el-fua.md
@@ -9,4 +9,8 @@ A esta altura ya todos vieron el video pero si no... La Wasa se los trae!!
 
   
 
-<object width="320" height="266" class="BLOGGER-youtube-video" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0" data-thumbnail-src="http://3.gvt0.com/vi/lYdT1OgiKg8/0.jpg"><param name="movie" value="http://www.youtube.com/v/lYdT1OgiKg8&amp;fs=1&amp;source=uds"><param name="bgcolor" value="#FFFFFF"><embed width="320" height="266" src="http://www.youtube.com/v/lYdT1OgiKg8&amp;fs=1&amp;source=uds" type="application/x-shockwave-flash"></object>
+<object width="320" height="266" class="BLOGGER-youtube-video" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0" data-thumbnail-src="http://3.gvt0.com/vi/lYdT1OgiKg8/0.jpg">
+<param name="movie" value="http://www.youtube.com/v/lYdT1OgiKg8&amp;fs=1&amp;source=uds">
+<param name="bgcolor" value="#FFFFFF">
+<embed width="320" height="266" src="http://www.youtube.com/v/lYdT1OgiKg8&amp;fs=1&amp;source=uds" type="application/x-shockwave-flash">
+</object>
